test/spec/if-end-label-mismatch.fail.txt
;;; ERROR: 1
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/if-end-label-mismatch.fail.wast
(;; STDERR ;;;
Error running "wast2wasm":
third_party/testsuite/if-end-label-mismatch.fail.wast:1:25: mismatching label "$a" != "$l"
(module (func if $a end $l))
                        ^^

;;; STDERR ;;)
